--- a/src/dataprep_pfr.ipynb
+++ b/src/dataprep_pfr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -78,14 +78,14 @@
       "3        HOU       BUF        2.0        3.0      43.0      -40.0   \n",
       "4        WAS       CLE        1.0       21.0      47.0      -26.0   \n",
       "\n",
-      "  home_team_winner away_win_bonus  \n",
-      "0             True              0  \n",
-      "1             True              0  \n",
-      "2            False              1  \n",
-      "3             True              0  \n",
-      "4             True              0  \n",
+      "  home_team_winner  away_win_bonus  \n",
+      "0             True               0  \n",
+      "1             True               0  \n",
+      "2            False               1  \n",
+      "3             True               0  \n",
+      "4             True               0  \n",
       "\n",
-      "[5 rows x 30 columns]\n"
+      "[5 rows x 32 columns]\n"
      ]
     }
    ],
@@ -150,6 +150,8 @@
     "df_games = df_games.drop(columns=['Unnamed: 7','Unnamed: 0','Team Name_x','Team Name_y']).rename(columns={'Unnamed: 5':'LoserIsHome', 'Winner/tie':'Winner','Loser/tie':'Loser', 'Team Abbr_x':'Winner Abbr','Team Abbr_y':'Loser Abbr'})\n",
     "df_games['Home Team'] = df_games.apply(lambda row: row['Loser Abbr'] if row['LoserIsHome']==\"@\" else row['Winner Abbr'], axis=1)\n",
     "df_games['Away Team'] = df_games.apply(lambda row: row['Winner Abbr'] if row['LoserIsHome']==\"@\" else row['Loser Abbr'], axis=1)\n",
+    "df_games['Home Score'] = df_games.apply(lambda row: row['PtsL'] if row['LoserIsHome'] == \"@\" else row['PtsW'], axis=1)\n",
+    "df_games['Away Score'] = df_games.apply(lambda row: row['PtsW'] if row['LoserIsHome'] == \"@\" else row['PtsL'], axis=1)\n",
     "df_games['Winner Yds'] = df_games.apply(lambda row: row['Winner Abbr'] if row['YdsW']>=row['YdsL'] else row['Loser Abbr'], axis=1)\n",
     "df_games['Loser Yds'] = df_games.apply(lambda row: row['Winner Abbr'] if row['YdsW']<row['YdsL'] else row['Loser Abbr'], axis=1)\n",
     "df_games['Margin Yds'] = df_games.apply(lambda row: abs(row['YdsW']-row['YdsL']), axis=1)\n",
@@ -170,42 +172,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Week  Day        Date    Time                 Winner LoserIsHome  \\\n",
-      "0     5  Thu  2024-10-03  8:15PM        Atlanta Falcons         NaN   \n",
-      "1     5  Sun  2024-10-06  9:30AM      Minnesota Vikings         NaN   \n",
-      "2     5  Sun  2024-10-06  1:00PM       Baltimore Ravens           @   \n",
-      "3     5  Sun  2024-10-06  1:00PM         Houston Texans         NaN   \n",
-      "4     5  Sun  2024-10-06  1:00PM  Washington Commanders         NaN   \n",
-      "\n",
-      "                  Loser  PtsW  PtsL   YdsW  ...  Loser TO  Margin TO  \\\n",
-      "0  Tampa Bay Buccaneers  36.0  30.0  550.0  ...        TB        0.0   \n",
-      "1         New York Jets  23.0  17.0  253.0  ...       MIN        1.0   \n",
-      "2    Cincinnati Bengals  41.0  38.0  520.0  ...       CIN        0.0   \n",
-      "3         Buffalo Bills  23.0  20.0  425.0  ...       BUF        2.0   \n",
-      "4      Cleveland Browns  34.0  13.0  434.0  ...       CLE        1.0   \n",
-      "\n",
-      "   Margin Pts  Total Pts  Margin Pct home_team_winner away_win_bonus  \\\n",
-      "0         6.0       66.0       -60.0             True              0   \n",
-      "1         6.0       40.0       -34.0             True              0   \n",
-      "2         3.0       79.0       -76.0            False              1   \n",
-      "3         3.0       43.0       -40.0             True              0   \n",
-      "4        21.0       47.0       -26.0             True              0   \n",
-      "\n",
-      "    DateTime DaysSinceLastGame_Home DaysSinceLastGame_Away  \n",
-      "0 2024-10-03                      4                      4  \n",
-      "1 2024-10-06                      7                      7  \n",
-      "2 2024-10-06                      7                      7  \n",
-      "3 2024-10-06                      7                      7  \n",
-      "4 2024-10-06                      7                      7  \n",
-      "\n",
-      "[5 rows x 33 columns]\n"
+      "Index(['Week', 'Day', 'Date', 'Time', 'Winner', 'LoserIsHome', 'Loser', 'PtsW',\n",
+      "       'PtsL', 'YdsW', 'TOW', 'YdsL', 'TOL', 'season', 'week', 'Winner Abbr',\n",
+      "       'Loser Abbr', 'Home Team', 'Away Team', 'Home Score', 'Away Score',\n",
+      "       'Winner Yds', 'Loser Yds', 'Margin Yds', 'Winner TO', 'Loser TO',\n",
+      "       'Margin TO', 'Margin Pts', 'Total Pts', 'Margin Pct',\n",
+      "       'home_team_winner', 'away_win_bonus', 'DateTime',\n",
+      "       'DaysSinceLastGame_Home', 'DaysSinceLastGame_Away'],\n",
+      "      dtype='object')\n"
      ]
     }
    ],
@@ -235,12 +216,13 @@
     "df_games = df_games.merge(all_games.rename(columns={'Team': 'Away Team', 'DaysSinceLastGame': 'DaysSinceLastGame_Away'}),\n",
     "              on=['DateTime', 'Away Team', 'season', 'week'], how='left')\n",
     "\n",
-    "print(df_games.head())"
+    "#print(df_games.head())\n",
+    "print(df_games.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
