--- a/src/dataprep_pfr.ipynb
+++ b/src/dataprep_pfr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -39,18 +39,20 @@
       "4      Cleveland Browns   boxscore  34.0  13.0  434.0  2.0  212.0  1.0  \n",
       "Index(['Week', 'Day', 'Date', 'Time', 'Winner/tie', 'Unnamed: 5', 'Loser/tie',\n",
       "       'Unnamed: 7', 'PtsW', 'PtsL', 'YdsW', 'TOW', 'YdsL', 'TOL'],\n",
-      "      dtype='object')\n"
+      "      dtype='object')\n",
+      "2458\n"
      ]
     }
    ],
    "source": [
     "print(df_raw.head())\n",
-    "print(df_raw.columns)"
+    "print(df_raw.columns)\n",
+    "print(len(df_raw))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
