--- a/src/2. featureprep_pfr.ipynb
+++ b/src/2. featureprep_pfr.ipynb
@@ -357,9 +357,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Team  Home_Avg_Diff  Away_Avg_Diff  Home_Impact  Away_Impact  \\\n",
+      "0     ARI         -6.806          2.417       -9.222        9.222   \n",
+      "1     ATL          1.389          6.889       -5.500        5.500   \n",
+      "2     BAL         -1.556          1.306       -2.861        2.861   \n",
+      "3     BUF         12.333         -9.639       21.972      -21.972   \n",
+      "4     CAR          1.222         10.222       -9.000        9.000   \n",
+      "...   ...            ...            ...          ...          ...   \n",
+      "4474  SEA          6.667         -6.667       13.333      -13.333   \n",
+      "4475   SF         -1.000         16.333      -17.333       17.333   \n",
+      "4476   TB         -4.333          2.500       -6.833        6.833   \n",
+      "4477  TEN         -2.333         10.167      -12.500       12.500   \n",
+      "4478  WAS          0.000         -2.667        2.667       -2.667   \n",
+      "\n",
+      "      Matchup_Count SeasonWeek  Season  Week  \n",
+      "0                20   2024_W05    2024     5  \n",
+      "1                20   2024_W05    2024     5  \n",
+      "2                19   2024_W05    2024     5  \n",
+      "3                19   2024_W05    2024     5  \n",
+      "4                19   2024_W05    2024     5  \n",
+      "...             ...        ...     ...   ...  \n",
+      "4474             12   2016_W17    2016    17  \n",
+      "4475             12   2016_W17    2016    17  \n",
+      "4476             12   2016_W17    2016    17  \n",
+      "4477             12   2016_W17    2016    17  \n",
+      "4478             12   2016_W17    2016    17  \n",
+      "\n",
+      "[4479 rows x 9 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "df_fieldadv = df_results[~df_results['Margin Yds'].isna()][['season','week','Home Team','Away Team','Home Score', 'Away Score']]\n",
     "df_fieldadv['Margin HomeAway'] = df_fieldadv['Home Score'] - df_fieldadv['Away Score']\n",
@@ -449,9 +483,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Team', 'Home_Avg_Diff', 'Away_Avg_Diff', 'Home_Impact', 'Away_Impact',\n",
+      "       'Matchup_Count', 'SeasonWeek', 'Season', 'Week'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "print(final_team_impact_df.columns)"
    ]
@@ -465,9 +509,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Day', 'Date', 'Time', 'Winner', 'LoserIsHome', 'Loser', 'PtsW', 'PtsL',\n",
+      "       'YdsW', 'TOW', 'YdsL', 'TOL', 'season', 'week', 'Winner Abbr',\n",
+      "       'Loser Abbr', 'Home Team', 'Away Team', 'Home Score', 'Away Score',\n",
+      "       'Winner Yds', 'Loser Yds', 'Margin Yds', 'Winner TO', 'Loser TO',\n",
+      "       'Margin TO', 'Margin Pts', 'Total Pts', 'Margin Pct',\n",
+      "       'home_team_winner', 'away_win_bonus', 'DateTime',\n",
+      "       'DaysSinceLastGame_Home', 'DaysSinceLastGame_Away', 'Home_DefenseRank',\n",
+      "       'Home_OffenseRank', 'Home_ScoreRank', 'Week', 'Away_DefenseRank',\n",
+      "       'Away_OffenseRank', 'Away_ScoreRank', 'Spread', 'Delta_OffenseRank',\n",
+      "       'Ratio_OffenseRank', 'Delta_DefenseRank', 'Ratio_DefenseRank',\n",
+      "       'Delta_ScoreRank', 'Ratio_ScoreRank', 'intTerm1', 'intTerm2',\n",
+      "       'intTerm3', 'intTerm4', 'quadTerm1', 'quadTerm2', 'quadTerm3',\n",
+      "       'quadTerm4', 'HomeStrength', 'AwayStrength'],\n",
+      "      dtype='object')\n",
+      "2211\n"
+     ]
+    }
+   ],
    "source": [
     "# Preprocess the combined_rankings dataframe to create offensive and defensive rank features\n",
     "rankings = final_rankings_df.pivot(index=['Team', 'SeasonWeek', 'Season', 'Week'], columns='Type', values='Ranking').reset_index()\n",
@@ -530,9 +596,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Day        Date    Time                 Winner LoserIsHome  \\\n",
+      "0  Thu  2024-10-03  8:15PM        Atlanta Falcons         NaN   \n",
+      "1  Sun  2024-10-06  9:30AM      Minnesota Vikings         NaN   \n",
+      "2  Sun  2024-10-06  1:00PM       Baltimore Ravens           @   \n",
+      "3  Sun  2024-10-06  1:00PM         Houston Texans         NaN   \n",
+      "4  Sun  2024-10-06  1:00PM  Washington Commanders         NaN   \n",
+      "\n",
+      "                  Loser  PtsW  PtsL   YdsW  TOW  ...  intTerm4  quadTerm1  \\\n",
+      "0  Tampa Bay Buccaneers  36.0  30.0  550.0  1.0  ...  0.001417   0.000077   \n",
+      "1         New York Jets  23.0  17.0  253.0  2.0  ...  0.000536   0.013266   \n",
+      "2    Cincinnati Bengals  41.0  38.0  520.0  1.0  ...  0.000572   0.000314   \n",
+      "3         Buffalo Bills  23.0  20.0  425.0  2.0  ...  0.000345   0.000867   \n",
+      "4      Cleveland Browns  34.0  13.0  434.0  2.0  ...  0.000335   0.000420   \n",
+      "\n",
+      "   quadTerm2  quadTerm3 quadTerm4 HomeStrength AwayStrength Home_Impact  \\\n",
+      "0   0.002313   0.001724  0.001164      0.06953      0.18686      -5.500   \n",
+      "1   0.006780   0.000152  0.001891      0.18464      0.13481      -0.472   \n",
+      "2   0.000549   0.002098  0.000156      0.06703      0.04481       0.187   \n",
+      "3   0.000140   0.001423  0.000084      0.10086      0.02682       0.556   \n",
+      "4   0.000029   0.000145  0.000774      0.04431      0.03593     -15.556   \n",
+      "\n",
+      "   Away_Impact    GameType  \n",
+      "0       -8.278  Historical  \n",
+      "1       14.083  Historical  \n",
+      "2        2.861  Historical  \n",
+      "3      -21.972  Historical  \n",
+      "4       -0.000  Historical  \n",
+      "\n",
+      "[5 rows x 61 columns]\n",
+      "2211 2211\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Merge with home/away impact to create the feature set\n",
@@ -576,9 +679,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Day', 'Date', 'Time', 'Winner', 'LoserIsHome', 'Loser', 'PtsW', 'PtsL',\n",
+      "       'YdsW', 'TOW', 'YdsL', 'TOL', 'season', 'week', 'Winner Abbr',\n",
+      "       'Loser Abbr', 'Home Team', 'Away Team', 'Home Score', 'Away Score',\n",
+      "       'Winner Yds', 'Loser Yds', 'Margin Yds', 'Winner TO', 'Loser TO',\n",
+      "       'Margin TO', 'Margin Pts', 'Total Pts', 'Margin Pct',\n",
+      "       'home_team_winner', 'away_win_bonus', 'DateTime',\n",
+      "       'DaysSinceLastGame_Home', 'DaysSinceLastGame_Away', 'Home_DefenseRank',\n",
+      "       'Home_OffenseRank', 'Home_ScoreRank', 'Week', 'Away_DefenseRank',\n",
+      "       'Away_OffenseRank', 'Away_ScoreRank', 'Spread', 'Delta_OffenseRank',\n",
+      "       'Ratio_OffenseRank', 'Delta_DefenseRank', 'Ratio_DefenseRank',\n",
+      "       'Delta_ScoreRank', 'Ratio_ScoreRank', 'intTerm1', 'intTerm2',\n",
+      "       'intTerm3', 'intTerm4', 'quadTerm1', 'quadTerm2', 'quadTerm3',\n",
+      "       'quadTerm4', 'HomeStrength', 'AwayStrength', 'Home_Impact',\n",
+      "       'Away_Impact', 'GameType'],\n",
+      "      dtype='object')\n",
+      "2199 12\n"
+     ]
+    }
+   ],
    "source": [
     "feature_df = adv_df\n",
     "print(feature_df.columns)\n",
@@ -592,9 +718,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Delta_ScoreRank  Ratio_ScoreRank\n",
+      "count      2199.000000      2199.000000\n",
+      "mean          0.000275         2.152297\n",
+      "std           0.041654         3.646089\n",
+      "min          -0.190230         0.013996\n",
+      "25%          -0.017135         0.459149\n",
+      "50%           0.000000         0.999616\n",
+      "75%           0.017925         2.221810\n",
+      "max           0.219740        55.795511\n",
+      "      Delta_ScoreRank  Ratio_ScoreRank\n",
+      "0.05        -0.068186         0.117328\n",
+      "0.10        -0.044448         0.189477\n",
+      "0.15        -0.031521         0.272978\n",
+      "0.20        -0.023382         0.361712\n",
+      "0.25        -0.017135         0.459149\n",
+      "0.30        -0.012044         0.550076\n",
+      "0.35        -0.008400         0.649963\n",
+      "0.40        -0.005316         0.743395\n",
+      "0.45        -0.002509         0.858579\n",
+      "0.50         0.000000         0.999616\n",
+      "0.55         0.002220         1.143941\n",
+      "0.60         0.005230         1.322784\n",
+      "0.65         0.008540         1.546106\n",
+      "0.70         0.012580         1.838846\n",
+      "0.75         0.017925         2.221810\n",
+      "0.80         0.024472         2.703818\n",
+      "0.85         0.032990         3.602244\n",
+      "0.90         0.045768         5.146693\n",
+      "0.95         0.067127         8.182584\n"
+     ]
+    }
+   ],
    "source": [
     "# Basic summary statistics for all numerical columns\n",
     "print(merged_played[['Delta_ScoreRank','Ratio_ScoreRank']].describe())\n",
