prep for 2025 season

--- a/src/1. dataprep_pfr.ipynb
+++ b/src/1. dataprep_pfr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,30 +16,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Week  Day        Date    Time             Winner/tie Unnamed: 5  \\\n",
-      "0     5  Thu  2024-10-03  8:15PM        Atlanta Falcons        NaN   \n",
-      "1     5  Sun  2024-10-06  9:30AM      Minnesota Vikings        NaN   \n",
-      "2     5  Sun  2024-10-06  1:00PM       Baltimore Ravens          @   \n",
-      "3     5  Sun  2024-10-06  1:00PM         Houston Texans        NaN   \n",
-      "4     5  Sun  2024-10-06  1:00PM  Washington Commanders        NaN   \n",
+      "   Week  Day        Date    Time            Winner/tie Unnamed: 5  \\\n",
+      "0     1  Thu  2025-09-04  8:20PM   Philadelphia Eagles        NaN   \n",
+      "1     1  Fri  2025-09-05  8:00PM  Los Angeles Chargers        NaN   \n",
+      "2     1  Sun  2025-09-07  1:00PM  Jacksonville Jaguars        NaN   \n",
+      "3     1  Sun  2025-09-07  1:00PM   Pittsburgh Steelers          @   \n",
+      "4     1  Sun  2025-09-07  1:00PM    Cincinnati Bengals          @   \n",
       "\n",
-      "              Loser/tie Unnamed: 7  PtsW  PtsL   YdsW  TOW   YdsL  TOL  \n",
-      "0  Tampa Bay Buccaneers   boxscore  36.0  30.0  550.0  1.0  333.0  1.0  \n",
-      "1         New York Jets   boxscore  23.0  17.0  253.0  2.0  254.0  3.0  \n",
-      "2    Cincinnati Bengals   boxscore  41.0  38.0  520.0  1.0  442.0  1.0  \n",
-      "3         Buffalo Bills   boxscore  23.0  20.0  425.0  2.0  276.0  0.0  \n",
-      "4      Cleveland Browns   boxscore  34.0  13.0  434.0  2.0  212.0  1.0  \n",
+      "            Loser/tie Unnamed: 7  PtsW  PtsL   YdsW  TOW   YdsL  TOL  \n",
+      "0      Dallas Cowboys   boxscore  24.0  20.0  302.0  0.0  307.0  1.0  \n",
+      "1  Kansas City Chiefs   boxscore  27.0  21.0  394.0  0.0  347.0  0.0  \n",
+      "2   Carolina Panthers   boxscore  26.0  10.0  378.0  1.0  255.0  3.0  \n",
+      "3       New York Jets   boxscore  34.0  32.0  271.0  0.0  394.0  1.0  \n",
+      "4    Cleveland Browns   boxscore  17.0  16.0  141.0  0.0  327.0  2.0  \n",
       "Index(['Week', 'Day', 'Date', 'Time', 'Winner/tie', 'Unnamed: 5', 'Loser/tie',\n",
       "       'Unnamed: 7', 'PtsW', 'PtsL', 'YdsW', 'TOW', 'YdsL', 'TOL'],\n",
       "      dtype='object')\n",
-      "2633\n"
+      "2905\n"
      ]
     }
    ],
@@ -51,40 +51,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Week  Day        Date    Time                 Winner LoserIsHome  \\\n",
-      "0     5  Thu  2024-10-03  8:15PM        Atlanta Falcons         NaN   \n",
-      "1     5  Sun  2024-10-06  9:30AM      Minnesota Vikings         NaN   \n",
-      "2     5  Sun  2024-10-06  1:00PM       Baltimore Ravens           @   \n",
-      "3     5  Sun  2024-10-06  1:00PM         Houston Texans         NaN   \n",
-      "4     5  Sun  2024-10-06  1:00PM  Washington Commanders         NaN   \n",
+      "   Week  Day        Date    Time                Winner LoserIsHome  \\\n",
+      "0     1  Thu  2025-09-04  8:20PM   Philadelphia Eagles         NaN   \n",
+      "1     1  Fri  2025-09-05  8:00PM  Los Angeles Chargers         NaN   \n",
+      "2     1  Sun  2025-09-07  1:00PM  Jacksonville Jaguars         NaN   \n",
+      "3     1  Sun  2025-09-07  1:00PM   Pittsburgh Steelers           @   \n",
+      "4     1  Sun  2025-09-07  1:00PM    Cincinnati Bengals           @   \n",
       "\n",
-      "                  Loser  PtsW  PtsL   YdsW  ...  Loser Yds  Margin Yds  \\\n",
-      "0  Tampa Bay Buccaneers  36.0  30.0  550.0  ...         TB       217.0   \n",
-      "1         New York Jets  23.0  17.0  253.0  ...        MIN         1.0   \n",
-      "2    Cincinnati Bengals  41.0  38.0  520.0  ...        CIN        78.0   \n",
-      "3         Buffalo Bills  23.0  20.0  425.0  ...        BUF       149.0   \n",
-      "4      Cleveland Browns  34.0  13.0  434.0  ...        CLE       222.0   \n",
+      "                Loser  PtsW  PtsL   YdsW  ...  Loser Yds  Margin Yds  \\\n",
+      "0      Dallas Cowboys  24.0  20.0  302.0  ...        PHI         5.0   \n",
+      "1  Kansas City Chiefs  27.0  21.0  394.0  ...         KC        47.0   \n",
+      "2   Carolina Panthers  26.0  10.0  378.0  ...        CAR       123.0   \n",
+      "3       New York Jets  34.0  32.0  271.0  ...        PIT       123.0   \n",
+      "4    Cleveland Browns  17.0  16.0  141.0  ...        CIN       186.0   \n",
       "\n",
       "   Winner TO  Loser TO  Margin TO Margin Pts Total Pts Margin Pct  \\\n",
-      "0        ATL        TB        0.0        6.0      66.0      -60.0   \n",
-      "1        NYJ       MIN        1.0        6.0      40.0      -34.0   \n",
-      "2        BAL       CIN        0.0        3.0      79.0      -76.0   \n",
-      "3        HOU       BUF        2.0        3.0      43.0      -40.0   \n",
-      "4        WAS       CLE        1.0       21.0      47.0      -26.0   \n",
+      "0        DAL       PHI        1.0        4.0      44.0      -40.0   \n",
+      "1        LAC        KC        0.0        6.0      48.0      -42.0   \n",
+      "2        CAR       JAC        2.0       16.0      36.0      -20.0   \n",
+      "3        NYJ       PIT        1.0        2.0      66.0      -64.0   \n",
+      "4        CLE       CIN        2.0        1.0      33.0      -32.0   \n",
       "\n",
       "  home_team_winner  away_win_bonus  \n",
       "0             True               0  \n",
       "1             True               0  \n",
-      "2            False               1  \n",
-      "3             True               0  \n",
-      "4             True               0  \n",
+      "2             True               0  \n",
+      "3            False               1  \n",
+      "4            False               1  \n",
       "\n",
       "[5 rows x 32 columns]\n"
      ]
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
